@@ -140,13 +140,17 @@ position, or nil."
 
 (defun slime-beginning-of-tlf ()
   (let* ((state (slime-current-parser-state))
-         (depth (nth 0 state)))
-    (if (plusp depth)
-        (up-list (- depth))
-        (when-let (upper-pt (nth 1 state)) 
-          (goto-char upper-pt)
-          (while (when-let (upper-pt (nth 1 (slime-current-parser-state)))
-                   (goto-char upper-pt)))))))
+         (comment-start (nth 8 state)))
+    (when comment-start                 ; or string
+      (goto-char comment-start)
+      (setq state (slime-current-parser-state)))
+    (let ((depth (nth 0 state)))
+      (if (plusp depth)
+          (up-list (- depth))
+          (when-let (upper-pt (nth 1 state)) 
+            (goto-char upper-pt)
+            (while (when-let (upper-pt (nth 1 (slime-current-parser-state)))
+                     (goto-char upper-pt))))))))
 
 (defun slime-compute-region-for-font-lock (orig-beg orig-end)
   (let ((beg orig-beg)
